--- a/src/app/_layout/header.html
+++ b/src/app/_layout/header.html
@@ -52,13 +52,11 @@
             <button type="submit" class="waves-effect waves-light btn blue" id="btnLogin">Đăng nhập</button>
           </div>
         </form>
-        <div>
-          <div>Hoặc</div>
-        </div>
+
         <form action="/auth/google" method="GET">
           <div class="row">
             <div class="col s12 center">
-              <button id="login-fb-button" type="submit" class="waves-effect waves-light btn" style="background: #df360a;">Đăng nhập bằng tài khoản Google</button>
+              <button id="login-fb-button" type="submit" class="waves-effect waves-light btn" style="background: #df360a; margin-top: 20px;">Đăng nhập bằng tài khoản Google</button>
             </div>
           </div>
         </form>
