--- a/src/app/_layout/admin.layout.html
+++ b/src/app/_layout/admin.layout.html
@@ -93,7 +93,7 @@
                 <a href="/add-exams.html">Tạo mới đề thi</a>
               </li>
               <li>
-                <a href="/home">Danh sách đề thi</a>
+                <a href="/admin/exams-list.html">Danh sách đề thi</a>
               </li>
             </ul>
           </li>
