--- a/src/app/user/profile.html
+++ b/src/app/user/profile.html
@@ -24,9 +24,9 @@
             </li>
           </ul>
         </div>
-        <div class="card-action">
+        <!-- <div class="card-action">
           <a href="#">Thay đổi thông tin cá nhân</a>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
