--- a/src/app/_layout/admin.layout.html
+++ b/src/app/_layout/admin.layout.html
@@ -79,7 +79,7 @@
                 <a href="{{ router.url('get:add:news') }}">Tạo mới tin tức</a>
               </li>
               <li {{ 'class=navigation__active' if isCurrentRoute( 'get:all:news') }}>
-                <a href="{{ router.url('get:all:news') }}">Danh sách tin tức</a>
+                <a href="/admin/news-list.html">Danh sách tin tức</a>
               </li>
             </ul>
           </li>
